[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mt3"
version = "0.0.1"
description = "Multi-Task Multitrack Music Transcription"
authors = ["Google Inc. <no-reply@google.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "http://github.com/magenta/mt3"
keywords = ["music", "transcription", "machinelearning", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "mt3"}]
include = ["mt3/**/*.gin"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
absl-py = ">=1.0.0"
gin-config = ">=0.5.0"
immutabledict = ">=2.0.0"
librosa = ">=0.9.2"
mir_eval = ">=0.7"
numpy = ">=1.20.0"
pretty_midi = ">=0.2.9"
scikit-learn = ">=1.0.2"
scipy = ">=1.8.0"
# Using specific versions of tensorflow that work well together
tensorflow = ">=2.8.0,<2.12.0"
tensorflow-datasets = ">=4.6.0"
t5 = ">=0.9.4"

# Git dependencies need to be pinned to specific compatible versions
# Based on research, using a fixed compatible set of versions
flax = {git = "https://github.com/google/flax.git", rev = "v0.6.4"}
note-seq = {git = "https://github.com/magenta/note-seq.git", rev = "v0.0.5"}
# Using compatible versions of seqio and t5x
seqio = {git = "https://github.com/google/seqio.git", rev = "v0.0.14"}
t5x = {git = "https://github.com/google-research/t5x.git", rev = "v0.0.10"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.0.0"
pylint = ">=2.17.0"

[tool.pytest.ini_options]
testpaths = ["mt3"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88 